--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>쇼핑파인더 - TikTok 검색</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🛍️</text></svg>">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.png?v=1">
+    <link rel="shortcut icon" href="favicon.png?v=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="settings-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -64,7 +66,7 @@
                             <i class="fas fa-coins"></i>
                             <span class="credit-label">크레딧</span>
                         </div>
-                        <div class="credit-amount" id="creditAmount">1,250</div>
+                        <div class="credit-amount" id="creditAmount">0</div>
                     </div>
                     <button class="charge-btn" onclick="openChargeModal()">
                         <i class="fas fa-plus"></i>
