Redesign settings and admin pages for consistency
- Change settings from modal to dedicated page (settings.html)
- Update navigation to link to settings.html instead of modal
- Redesign admin page to match main app design language
- Unify sidebar design across all pages (index, settings, admin)
- Update favicons to use consistent favicon.png
- Fix credit display initialization (0 instead of hardcoded values)
- Improve mobile header consistency

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link" onclick="openSettingsModal()">
+                        <a href="settings.html" class="nav-link">
                             <i class="fas fa-cog"></i>
                             <span>설정</span>
                         </a>
