--- a/admin.html
+++ b/admin.html
@@ -269,24 +269,27 @@
                             <h3>크레딧 지급/차감</h3>
                             <div class="form-grid">
                                 <div class="form-group">
-                                    <label for="creditUserEmail">사용자 이메일</label>
-                                    <input type="email" id="creditUserEmail" placeholder="사용자 이메일을 입력하세요">
+                                    <label for="adminCreditUserEmail">사용자 이메일</label>
+                                    <input type="email" id="adminCreditUserEmail" placeholder="사용자 이메일을 입력하세요">
                                 </div>
                                 <div class="form-group">
-                                    <label for="creditAmount">크레딧 수량</label>
-                                    <input type="number" id="creditAmount" placeholder="크레딧 수량">
+                                    <label for="adminCreditAmount">크레딧 수량</label>
+                                    <input type="number" id="adminCreditAmount" placeholder="크레딧 수량" min="1">
                                 </div>
                                 <div class="form-group">
-                                    <label for="creditAction">액션</label>
-                                    <select id="creditAction">
+                                    <label for="adminCreditAction">액션</label>
+                                    <select id="adminCreditAction">
                                         <option value="add">지급</option>
                                         <option value="deduct">차감</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
-                                    <label for="creditReason">사유</label>
-                                    <input type="text" id="creditReason" placeholder="크레딧 변경 사유">
+                                    <label for="adminCreditReason">사유</label>
+                                    <input type="text" id="adminCreditReason" placeholder="크레딧 변경 사유">
                                 </div>
+                            </div>
+                            <div class="credit-pricing-info">
+                                <p><i class="fas fa-info-circle"></i> 1 크레딧 = 100원 기준</p>
                             </div>
                             <button class="btn primary" onclick="manageCreditForUser()">실행</button>
                         </div>
