Fix email verification redirect URL for production deployment
- Add getCurrentDomain() function to detect current domain automatically
- Fix Supabase signUp emailRedirectTo to use current domain instead of localhost
- Implement forgot password functionality with proper redirect URL
- Add forgot password modal with professional design
- Include password reset email functionality with domain-aware redirects
- Add comprehensive styling for forgot password modal
- Ensure email verification works correctly on deployed Vercel domain
- Add proper error handling and Korean error messages for password reset

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             <span class="checkmark"></span>
                             로그인 상태 유지
                         </label>
-                        <a href="#" class="forgot-password">비밀번호 찾기</a>
+                        <a href="#" class="forgot-password" onclick="openForgotPasswordModal(event)">비밀번호 찾기</a>
                     </div>
                     
                     <button type="submit" class="auth-btn primary">
