Implement admin-approval based credit charging system
User-side changes:
- Remove user payment confirmation button from bank transfer modal
- Change to application completion message instead of payment confirmation
- Update processBankTransfer to use submitCreditRequest function
- Add getCurrentUser and getUserCreditRequests functions for user management

Admin-side changes:
- Add credit request approval section to admin panel
- Implement loadCreditRequests function to display pending requests
- Add approveCreditRequest and rejectCreditRequest functions
- Create comprehensive request management UI with status badges
- Add real-time credit allocation when admin approves requests

System improvements:
- Replace immediate credit charging with admin approval workflow
- Store credit requests in localStorage with proper status tracking
- Add request filtering by status (pending, approved, rejected)
- Implement proper request history with timestamps and approval details
- Add responsive design for mobile credit request management

UI enhancements:
- Add status badges with gradient colors for request states
- Create detailed request cards with user info and amounts
- Add action buttons for approve/reject with confirmation dialogs
- Implement empty state handling for request lists
- Add proper CSS styling for all new admin components

--- a/admin.html
+++ b/admin.html
@@ -294,6 +294,25 @@
                             <button class="btn primary" onclick="manageCreditForUser()">실행</button>
                         </div>
                         
+                        <div class="credit-requests">
+                            <h3>충전 신청 승인</h3>
+                            <div class="requests-filters">
+                                <select id="requestStatus">
+                                    <option value="pending">대기 중</option>
+                                    <option value="approved">승인됨</option>
+                                    <option value="rejected">거부됨</option>
+                                    <option value="all">전체</option>
+                                </select>
+                                <button class="btn secondary" onclick="loadCreditRequests()">
+                                    <i class="fas fa-refresh"></i>
+                                    새로고침
+                                </button>
+                            </div>
+                            <div class="requests-list" id="creditRequestsList">
+                                <!-- 충전 신청 내역이 여기에 표시됩니다 -->
+                            </div>
+                        </div>
+                        
                         <div class="credit-transactions">
                             <h3>크레딧 거래 내역</h3>
                             <div class="transactions-filters">
