🔧 크레딧 초기화 및 설정 저장 문제 해결
- 크레딧 초기화 문제 수정: updateCreditDisplay에서 불필요한 재초기화 방지
- initializeCredits 함수 개선: 이미 초기화된 경우 재초기화 방지
- 설정 저장/로드 기능 강화: 에러 처리 및 안전성 개선
- 크레딧 테스트 함수 추가: setTestCredits, testCreditSystem
- 설정 페이지에서 자동 설정 로드 기능 추가
- 테스트 페이지 추가: test-credits.html로 크레딧 시스템 테스트 가능

--- a/settings.html
+++ b/settings.html
@@ -429,9 +429,18 @@
             }
         }
         
-        // 페이지 로드 시 기본 탭 설정
+        // 페이지 로드 시 기본 탭 설정 및 설정 로드
         document.addEventListener('DOMContentLoaded', function() {
-            showSettingsTab('general');
+            // 설정 탭 초기화
+            initializeSettingsTabs();
+            
+            // 설정 로드
+            setTimeout(() => {
+                if (typeof loadSettings === 'function') {
+                    loadSettings();
+                    console.log('설정 로드 완료');
+                }
+            }, 500);
         });
     </script>
 </body>
