--- a/settings.html
+++ b/settings.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png?v=1">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.png?v=1">
     <link rel="shortcut icon" href="favicon.png?v=1">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="settings-styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.1">
+    <link rel="stylesheet" href="settings-styles.css?v=1.1">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -413,8 +413,8 @@
         </div>
     </div>
 
-    <script src="supabase-config.js"></script>
-    <script src="script.js"></script>
+    <script src="supabase-config.js?v=1.1"></script>
+    <script src="script.js?v=1.1"></script>
     <script>
         // 설정 탭 전환 함수
         function showSettingsTab(tabName) {
