🔧 간편링크생성 모달 탭 전환 시 유지 문제 해결
🐛 문제 해결:
- 간편링크생성 모달이 다른 탭 클릭 시 사라지는 문제 수정
- showSearch(), showFavorites() 함수에서 모달 상태 확인 로직 추가
- closeSidebar() 함수에서 모달 열림 상태 확인 후 overflow 처리

🔧 수정 내용:
1. 간편링크생성 모달이 열려있을 때는 사이드바 닫기 동작 제한
2. body.style.overflow 충돌 방지 (모달 열림 상태에서 덮어쓰기 방지)
3. 탭 전환 시 모달 상태 유지 로직 추가

💾 캐시 업데이트:
- 모든 CSS/JS 파일 버전을 v=1.2로 업데이트
- 브라우저 캐시 문제 방지

✅ 이제 간편링크생성 모달이 열린 상태에서 검색/즐겨찾기 탭을 클릭해도 모달이 유지됩니다.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png?v=1">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.png?v=1">
     <link rel="shortcut icon" href="favicon.png?v=1">
-    <link rel="stylesheet" href="styles.css?v=1.1">
-    <link rel="stylesheet" href="settings-styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.2">
+    <link rel="stylesheet" href="settings-styles.css?v=1.2">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -531,6 +531,6 @@
         </div>
     </div>
 
-    <script src="script.js?v=1.1"></script>
+    <script src="script.js?v=1.2"></script>
 </body>
 </html>
