--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png?v=1">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.png?v=1">
     <link rel="shortcut icon" href="favicon.png?v=1">
-    <link rel="stylesheet" href="styles.css?v=1.3">
-    <link rel="stylesheet" href="settings-styles.css?v=1.3">
+    <link rel="stylesheet" href="styles.css?v=1.4">
+    <link rel="stylesheet" href="settings-styles.css?v=1.4">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="settings.html" class="nav-link">
+                        <a href="#" class="nav-link" onclick="showSettings(event)">
                             <i class="fas fa-cog"></i>
                             <span>설정</span>
                         </a>
@@ -531,6 +531,6 @@
         </div>
     </div>
 
-    <script src="script.js?v=1.3"></script>
+    <script src="script.js?v=1.4"></script>
 </body>
 </html>
