--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link" onclick="showSettings(event)">
+                        <a href="settings.html" class="nav-link">
                             <i class="fas fa-cog"></i>
                             <span>설정</span>
                         </a>
@@ -532,6 +532,6 @@
     </div>
 
 
-    <script src="script.js?v=2.4"></script>
+    <script src="script.js?v=3.1&t=1725437000"></script>
 </body>
 </html>
