🔗 설정 페이지 네비게이션 링크 수정
🔧 주요 수정사항:
- settings.html의 네비게이션을 index.html과 동일하게 통일
- 간편링크생성 탭 추가 (누락되어 있었음)
- 모든 탭을 올바른 링크로 연결

📝 네비게이션 구조:
- 검색: index.html (메인 페이지로 이동)
- 즐겨찾기: index.html#favorites (해시 라우팅)
- 간편링크생성: index.html#linkcreate (해시 라우팅)
- 설정: settings.html (현재 페이지)
- 관리자: admin.html (별도 페이지)

🚀 라우터 개선:
- 해시 기반 라우팅 지원 추가
- #favorites, #linkcreate 해시를 SPA 라우트로 변환
- 설정 페이지에서 다른 탭 클릭 시 정상 작동

💾 버전 업데이트:
- JavaScript 버전을 v=3.2&t=1725437200으로 업데이트
- index.html과 settings.html 모두 동일한 버전 적용

✅ 해결된 문제:
- 설정 페이지에서 간편링크생성 탭 사라지는 문제
- 설정 페이지에서 즐겨찾기 버튼 작동하지 않는 문제
- 네비게이션 일관성 문제

--- a/settings.html
+++ b/settings.html
@@ -32,18 +32,23 @@
             <nav class="sidebar-nav">
                 <ul>
                     <li class="nav-item">
-                        <a href="#" class="nav-link" onclick="goBackToSearch(event)">
+                        <a href="index.html" class="nav-link">
                             <i class="fas fa-search"></i>
                             <span>검색</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link" onclick="showFavorites(event)">
+                        <a href="index.html#favorites" class="nav-link">
                             <i class="fas fa-heart"></i>
                             <span>즐겨찾기</span>
                         </a>
                     </li>
-
+                    <li class="nav-item">
+                        <a href="index.html#linkcreate" class="nav-link">
+                            <i class="fas fa-link"></i>
+                            <span>간편링크생성</span>
+                        </a>
+                    </li>
                     <li class="nav-item active">
                         <a href="settings.html" class="nav-link">
                             <i class="fas fa-cog"></i>
@@ -414,7 +419,7 @@
     </div>
 
     <script src="supabase-config.js?v=1.4"></script>
-    <script src="script.js?v=1.4"></script>
+    <script src="script.js?v=3.2&t=1725437200"></script>
     <script>
         // 검색 페이지로 돌아가면서 모달 상태 복원
         function goBackToSearch(event) {
