🔥 강력한 캐시 무효화 - 버전 4.0으로 업데이트
💥 브라우저 캐시 문제 해결:
- JavaScript 버전을 v=4.0&cache=bust&t=1725438000으로 대폭 업데이트
- 강력한 캐시 무효화를 위한 추가 파라미터 적용
- 설정 탭이 모달이 아닌 별도 페이지로 작동하도록 강제

🔧 문제 해결:
- 여전히 v=2.3이 로딩되는 브라우저 캐시 문제
- 설정 탭 클릭 시 무반응 문제
- 모달 시스템 대신 페이지 라우팅 강제 적용

✅ 이제 설정 탭이 settings.html 페이지로 정상 이동할 것입니다.

--- a/index.html
+++ b/index.html
@@ -532,6 +532,6 @@
     </div>
 
 
-    <script src="script.js?v=3.3&t=1725437400"></script>
+    <script src="script.js?v=4.0&cache=bust&t=1725438000"></script>
 </body>
 </html>
