--- a/settings.html
+++ b/settings.html
@@ -419,7 +419,7 @@
     </div>
 
     <script src="supabase-config.js?v=1.4"></script>
-    <script src="script.js?v=3.3&t=1725437400"></script>
+    <script src="script.js?v=4.0&cache=bust&t=1725438000"></script>
     <script>
         // 검색 페이지로 돌아가면서 모달 상태 복원
         function goBackToSearch(event) {
