--- a/settings.html
+++ b/settings.html
@@ -32,19 +32,19 @@
             <nav class="sidebar-nav">
                 <ul>
                     <li class="nav-item">
-                        <a href="/search" class="nav-link">
+                        <a href="index.html" class="nav-link">
                             <i class="fas fa-search"></i>
                             <span>검색</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/favorites" class="nav-link">
+                        <a href="index.html" class="nav-link" onclick="this.href='index.html'; setTimeout(() => { if(window.navigateToRoute) window.navigateToRoute('/favorites'); }, 100);">
                             <i class="fas fa-heart"></i>
                             <span>즐겨찾기</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/linkcreate" class="nav-link">
+                        <a href="index.html" class="nav-link" onclick="this.href='index.html'; setTimeout(() => { if(window.navigateToRoute) window.navigateToRoute('/linkcreate'); }, 100);">
                             <i class="fas fa-link"></i>
                             <span>간편링크생성</span>
                         </a>
@@ -419,7 +419,7 @@
     </div>
 
     <script src="supabase-config.js?v=1.4"></script>
-    <script src="script.js?v=4.0&cache=bust&t=1725438000"></script>
+    <script src="script.js?v=4.1&cache=bust&t=1725438200"></script>
     <script>
         // 검색 페이지로 돌아가면서 모달 상태 복원
         function goBackToSearch(event) {
