--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png?v=1">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.png?v=1">
     <link rel="shortcut icon" href="favicon.png?v=1">
-    <link rel="stylesheet" href="styles.css?v=1.5">
-    <link rel="stylesheet" href="settings-styles.css?v=1.5">
+    <link rel="stylesheet" href="styles.css?v=2.0&deploy=final">
+    <link rel="stylesheet" href="settings-styles.css?v=2.0&deploy=final">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -532,6 +532,6 @@
     </div>
 
 
-    <script src="script.js?v=4.1&cache=bust&t=1725438200"></script>
+    <script src="script.js?v=5.0&deploy=final&t=1725440000"></script>
 </body>
 </html>
