--- a/index.html
+++ b/index.html
@@ -532,6 +532,6 @@
     </div>
 
 
-    <script src="script.js?v=5.0&deploy=final&t=1725440000"></script>
+    <script src="script.js?v=6.0&force=true&cache=break&t=1725441000"></script>
 </body>
 </html>
