🔥 최종 해결책 - script-new.js로 캐시 완전 우회

--- a/index.html
+++ b/index.html
@@ -532,6 +532,6 @@
     </div>
 
 
-    <script src="script.js?v=6.0&force=true&cache=break&t=1725441000"></script>
+    <script src="script-new.js?v=1.0&fresh=true"></script>
 </body>
 </html>
