--- a/settings.html
+++ b/settings.html
@@ -419,7 +419,7 @@
     </div>
 
     <script src="supabase-config.js?v=1.4"></script>
-    <script src="script.js?v=5.0&deploy=final&t=1725440000"></script>
+    <script src="script-new.js?v=1.0&fresh=true"></script>
     <script>
         // 검색 페이지로 돌아가면서 모달 상태 복원
         function goBackToSearch(event) {
