--- a/index.html
+++ b/index.html
@@ -532,6 +532,6 @@
     </div>
 
 
-    <script src="script-new.js?v=1.0&fresh=true"></script>
+    <script src="script.js?v=7.0&final=true&cache=destroy"></script>
 </body>
 </html>
