--- a/index.html
+++ b/index.html
@@ -532,6 +532,6 @@
     </div>
 
 
-    <script src="script.js?v=7.0&final=true&cache=destroy"></script>
+    <script src="app-final.js?v=1.0&timestamp=1725442000"></script>
 </body>
 </html>
