🚀 핵무기 옵션 - 모든 파일명 완전 변경으로 Vercel 캐시 완전 우회

--- a/settings.html
+++ b/settings.html
@@ -419,7 +419,7 @@
     </div>
 
     <script src="supabase-config.js?v=1.4"></script>
-    <script src="app-final.js?v=1.0&timestamp=1725442000"></script>
+    <script src="core.js?v=1.0&fresh=true"></script>
     <script>
         // 검색 페이지로 돌아가면서 모달 상태 복원
         function goBackToSearch(event) {
