--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="settings.html" class="nav-link">
+                        <a href="#" class="nav-link" onclick="showSettings(event)">
                             <i class="fas fa-cog"></i>
                             <span>설정</span>
                         </a>
@@ -263,9 +263,6 @@
                         <div class="input-wrapper">
                             <i class="fas fa-lock"></i>
                             <input type="password" id="loginPassword" required placeholder="비밀번호를 입력하세요">
-                            <button type="button" class="toggle-password" onclick="togglePassword('loginPassword')">
-                                <i class="fas fa-eye"></i>
-                            </button>
                         </div>
                     </div>
                     
@@ -338,9 +335,6 @@
                         <div class="input-wrapper">
                             <i class="fas fa-lock"></i>
                             <input type="password" id="signupPassword" required placeholder="비밀번호를 입력하세요">
-                            <button type="button" class="toggle-password" onclick="togglePassword('signupPassword')">
-                                <i class="fas fa-eye"></i>
-                            </button>
                         </div>
                         <div class="password-strength" id="passwordStrength">
                             <div class="strength-bar">
